--- a/app/templates/bmc/html/com_resources/resourceportal.css
+++ b/app/templates/bmc/html/com_resources/resourceportal.css
@@ -469,28 +469,21 @@
   flex-wrap: wrap;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-auto-rows: 50px;
+  grid-auto-rows: 125px;
   grid-gap: 5px;
   justify-items: center;
   align-self: center;
   text-align: center;
 }
 
-#three .software-logos .logo-wrap {
-  width: 125px;
-  height: 125px;
-}
-
 #three .software-logos .logo-wrap img {
-  max-height: 50px;
+  height: 75%;
+  object-fit: scale-down;
 }
 
 #three .software-logos .logo-wrap h6 {
-  width: auto;
-  height: 50px;
-  align-self: center;
-  margin-top: 5px;
   color: #F1F2F2;
+  padding-top: .5em;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 900px) {
