--- a/app/templates/bmc/html/com_resources/resourceportal.scss
+++ b/app/templates/bmc/html/com_resources/resourceportal.scss
@@ -384,23 +384,19 @@ $white: #fff;
     flex-wrap: wrap;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-auto-rows: 50px;
+    grid-auto-rows: 125px;
     grid-gap: 5px;
     justify-items: center;
     align-self: center;
     text-align: center;
     .logo-wrap {
-      width: 125px;
-      height: 125px;
       img {
-        max-height: 50px;
+        height: 75%;
+        object-fit: scale-down;
       }
       h6 {
-        width: auto;
-        height: 50px;
-        align-self: center;
-        margin-top: 5px;
         color: $light-gray;
+        padding-top: .5em;
       }
     }
   }
