--- a/templates/bmc/css/group.less
+++ b/templates/bmc/css/group.less
@@ -223,6 +223,7 @@ body.panel-open {
 .super-group-bar {
 	background: #000000;
 	z-index: 999; /* Was 1001 */
+	height: 44px;
 	font-family: 'Ubuntu', sans-serif;
 	font-weight: 400;
 
@@ -406,6 +407,14 @@ body.panel-open {
 
 .super-group-menu > ul li a {
 	padding: 6px 15px !important;
+}
+
+.super-group-content {
+	margin-top: 21px !important;
+}
+
+.super-group-content-wrap {
+	margin-bottom: 25px !important;
 }
 /* END: Supergroup template fixes */
 
