--- a/templates/bmc/html/com_members/members.less
+++ b/templates/bmc/html/com_members/members.less
@@ -30,6 +30,15 @@
 
 #page_sidebar {
 	background: @colorSidebarBg;
+
+	.message-member a {
+		width: auto;
+		height: auto;
+
+		&:before {
+			margin-right: 0.2em;
+		}
+	}
 }
 
 #page_menu li.active:after {
