--- a/templates/bmc/css/pages/community.css
+++ b/templates/bmc/css/pages/community.css
@@ -22,10 +22,18 @@
   width: 100%;
 }
 
-.group-php-page {
+.contentpaneopen {
   display: grid;
   grid-template-columns: repeat(4, [col] 1fr);
-  grid-template-rows: repeat(4, [row] auto);
+  grid-template-rows: repeat(9, [row] auto);
+}
+
+.contentpaneopen p:first-child {
+  margin: 0;
+}
+
+.contentpaneopen p:nth-child(2) {
+  margin: 0;
 }
 
 .link {
