--- a/templates/bmc/css/pages/homepage.css
+++ b/templates/bmc/css/pages/homepage.css
@@ -1,7 +1,7 @@
-.group-php-page {
+.contentpaneopen {
   display: grid;
   grid-template-columns: repeat(4, [col] 1fr);
-  grid-template-rows: repeat(4, [row] auto);
+  grid-template-rows: repeat(4, [row] minmax(30rem, auto));
 }
 
 .green {
